# GalineEngine

./: .gitignore  CMakeLists.txt  main.cpp
src/: main.cpp
